<resources>
    <string name="app_name">Weather Forecast by Nathan Peterson</string>
    <string name="menu_refresh_all">Refresh All</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_delete_all">Delete All</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_edit">Edit Name</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="day">Day</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="precipitation">Precip.</string>
    <string name="fahrenheit">°F</string>
    <string name="percent">%</string>
    <string name="sunday">Sunday</string>
    <string name="saturday">Saturday</string>
    <string name="friday">Friday</string>
    <string name="thursday">Thursday</string>
    <string name="wednesday">Wednesday</string>
    <string name="tuesday">Tuesday</string>
    <string name="monday">Monday</string>
    <string name="today">Today</string>
    <string name="enter_name">enter name</string>
    <string name="enter_location_name">enter a location</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
</resources>